tests/base/parser/bad/cmodule-transition-id-with.scilla
scilla_version 0

contract Test
()

(* no parameters *)
transition something
end
